Add to lenstra and projective
Only small changes before I go out and get dinner. Wahoo.

--- a/LaTeX/projectivedefinitions.tex
+++ b/LaTeX/projectivedefinitions.tex
@@ -198,10 +198,11 @@ Two good examples of projective curves with singular points are provided by the 
 \end{figure}
 We can see that the point $[0,0,1]$ (the origin in the affine plane) is a singular point on both curves, since
 \begin{alignat*}{2}
-	&C_X = -3X^2,\quad &&N_X = - 3X^2 - 2XZ\\
-	&C_Y = 2YZ,\quad &&N_Y = 2YZ\\
-	&C_Z = Y^2,\quad &&N_Z = Y^2 -X^2
+	&C_X = -3X^2,\qquad &&N_X = - 3X^2 - 2XZ\\
+	&C_Y = 2YZ,\qquad &&N_Y = 2YZ\\
+	&C_Z = Y^2,\qquad &&N_Z = Y^2 -X^2,
 \end{alignat*}
+and all partial derivatives vanish at zero.
 
 Singular points are important to consider as they are the points where there is no sensible notion of the tangent to a curve.
 The importance of this will become apparent later on.
