--- a/LaTeX/lenstraalgorithm.tex
+++ b/LaTeX/lenstraalgorithm.tex
@@ -1,7 +1,10 @@
 % Don't forget to talk about how you spent ages writing a ======= implementation of the alg!
+Before we introduce Lenstra's elliptic curve factorisation algorithm, a prerequisite algorithm, the modular exponentiation algorithm.
+This, along with the euclidean algorithm, is one of the two dependencies that Lenstra's algorithm requires.
+Therefore, a python implementation of it is also included in \Cref{codeappendix}.
 \begin{definition}
 	The modular exponentiation algorithm allows highly efficient calculation of expressions of the form $a^k$ mod $n$, even when the numbers involved are very large.
-	To improve on the naive method of repeatedly multiplying by $a$ and reducing mod n, observe that, for $k=500$,
+	To improve on the naïve method of repeatedly multiplying by $a$ and reducing mod n, observe that, for $k=500$,
 $$500=2^2+2^4+2^5+2^6+2^7+2^8$$
 and therefore $a^k$ may be written as
 $$a^{500} = a^{2^{2}} \times a^{2^{4}} \times a^{2^{5}} \times a^{2^{6}} \times a^{2^{7}} \times a^{2^{8}}$$
@@ -17,11 +20,15 @@ Let $A_0 = a$ and calculate
 and then calculate $a^{500} = A_2 \times A_4 \times A_5 \times A_6 \times A_7 \times A_8 \mod n$.
 \end{definition}
 As the numbers involved grow larger, the time savings over the trivial method become enormous, as this is an $O(\log_2(k))$ algorithm, and it is this algorithm which we shall use in our arithmetic.
+
+%fermat's little theorem?
+
+Now we are ready to introduce Lenstra's algorithm:
 \begin{definition}
-	Lenstra's algorithm goes roughly as follows to factor an integer $N$:
+	Lenstra's algorithm goes as follows to factor an integer $N$ which is known to be composite:
 	\begin{itemize}
 		\item Choose random integers $b$, $x$ and $y \mod N$
-		\item Let $P = (x,y)$ and $c:=y^2-x^3-bx$ such that $P$ is a point on the curve $C: Y^2 = X^3 +bX + c \mod N$
+		\item Let $P = (x,y)$ and let $c = y^2 - x^3 - bx$ such that $P$ is a point on the curve $C: Y^2 = X^3 +bX + c \mod N$
 		\item Compute $kP$ for large $k$ ($k=10!$, for example)
 		\item If the computation of $kP$ is successful, increment $b$ and restart
 		\item Continue until one of the additions fails
