--- a/LaTeX/lenstraalgorithm.tex
+++ b/LaTeX/lenstraalgorithm.tex
@@ -1,7 +1,7 @@
 % Don't forget to talk about how you spent ages writing a ======= implementation of the alg!
 Before we introduce Lenstra's elliptic curve factorisation algorithm, a prerequisite algorithm, the modular exponentiation algorithm.
 This, along with the euclidean algorithm, is one of the two dependencies that Lenstra's algorithm requires.
-Therefore, a python implementation of it is also included in \Cref{codeappendix}.
+Therefore, a python implementation of it is also included in \cref{codeappendix}.
 \begin{definition}
 	The modular exponentiation algorithm allows highly efficient calculation of expressions of the form $a^k$ mod $n$, even when the numbers involved are very large.
 	To improve on the naïve method of repeatedly multiplying by $a$ and reducing mod n, observe that, for $k=500$,
@@ -39,48 +39,55 @@ Now we are ready to introduce Lenstra's algorithm:
 % But because it is composite, we know that $\fp[N]$ will not be a proper field, as some elements will not have multiplicative inverses.
 % If we attempt to calculate the inverses of these elements with the euclidean algorithm, we will be unable to, as they will not be coprime with $N$.
 % But this very calculation will give us a non-trivial divisor of $N$, so it will not matter that we cannot calculate the inverses.
+When calculating $kP$, we take a similar approach to the modular exponentiation algorithm, in that instead of calculating the $k$-fold sum $\underbrace{P+P+\ldots+P}_{k\text{ summands}}$, we calculate the binary expansion of $k$ and write
+$$k = a_0 2^0 + a_1 2^1 + \ldots + a_i 2^i + \ldots + a_n 2^n,$$
+where $n\in\N$ and each $a_i$ is either $0$ or $1$. It follows that
+\begin{equation}
+kP = a_0 2^0 P + a_1 2^1 P + \ldots + a_i 2^i P + \ldots + a_n 2^n P,
+\label{easykp}
+\end{equation}
+which we can calculate by repeatedly doubling $P$ up to $2^n P$ and adding the points that have nonzero coefficients in \cref{easykp}.
 
 Here's an example.
 Say we want to factor $N = 2638661449034729$.
 We can check that $N$ is composite with fermat's little theorem, as mentioned earlier.
 Using the modular exponentiation algorithm, we calculate $2^{N-1} \mod N = 1386068300154542$, which proves that $N$ is composite.
 Now we choose our point $P = (2,1)$ and let $b = 1$.
-Taking $k=10!$, we attempt to calculate $kP$.
-We do this by taking a similar approach to the modular exponentiation algorithm, in that instead of calculating the $k$-fold sum $\underbrace{P+P+\ldots+P}_{k\text{ summands}}$, we calculate the binary expansion of $k$ and write
-$$kP = $$
-
+Taking $k=10!$, we attempt to calculate $kP$ by doubling $P$ and adding relevant points as described before.
+Since $10! = 2^{8} + 2^{9} + 2^{10} + 2^{11} + 2^{12} + 2^{14} + 2^{16} + 2^{17} + 2^{18} + 2^{20} + 2^{21},$ we double $P$ up to $2^{21}P$ and then perform
+$$kP = 10!P = 2^{8}P + 2^{9}P + 2^{10}P + 2^{11}P + 2^{12}P + 2^{14}P + 2^{16}P + 2^{17}P + 2^{18}P + 2^{20}P + 2^{21}P.$$
 \begin{table}[htbp]
 	\centering
 	\begin{tabular}{r|l}
 		$k$ & $2^k P$\\
 		\hline
-		1 & $(2, 1)$\\
-		2 & $(1978996086776085, 1649163405646469)$\\
-		3 & $(1354531004190202, 712566094192611)$\\
-		4 & $(3034566536053, 2449122987212961)$\\
-		5 & $(1301371522167812, 173584894036069)$\\
-		6 & $(1996689877431974, 1560461237243599)$\\
-		7 & $(1690032118719931, 1115183255675848)$\\
-		8 & $(1106989140269887, 1249337210022185)$\\
-		9 & $(2006000898376031, 739903289262451)$\\
-		10 & $(360409978329708, 680989406049585)$\\
-		11 & $(1498346384082037, 1311595726437562)$\\
-		12 & $(317917266115269, 1139730538479759)$\\
-		13 & $(1176599249124147, 834137694636709)$\\
-		14 & $(229831052738857, 33111605954288)$\\
-		15 & $(514283736870450, 404971411450613)$\\
-		16 & $(1619865029688614, 1758310567012823)$\\
-		17 & $(2493326453658282, 878913854327751)$\\
-		18 & $(2243262160137209, 1701640423934925)$\\
-		19 & $(2323526509553459, 1123682327919074)$\\
-		20 & $(777963473649634, 1615413237260867)$\\
-		21 & $(1420808458933872, 2034011761100882)$\\
-		22 & $(2061892737190217, 240178323260750)$
+		0 & $(2, 1)$\\
+		1 & $(1978996086776085, 1649163405646469)$\\
+		2 & $(1354531004190202, 712566094192611)$\\
+		3 & $(3034566536053, 2449122987212961)$\\
+		4 & $(1301371522167812, 173584894036069)$\\
+		5 & $(1996689877431974, 1560461237243599)$\\
+		6 & $(1690032118719931, 1115183255675848)$\\
+		7 & $(1106989140269887, 1249337210022185)$\\
+		8 & $(2006000898376031, 739903289262451)$\\
+		9 & $(360409978329708, 680989406049585)$\\
+		10 & $(1498346384082037, 1311595726437562)$\\
+		11 & $(317917266115269, 1139730538479759)$\\
+		12 & $(1176599249124147, 834137694636709)$\\
+		13 & $(229831052738857, 33111605954288)$\\
+		14 & $(514283736870450, 404971411450613)$\\
+		15 & $(1619865029688614, 1758310567012823)$\\
+		16 & $(2493326453658282, 878913854327751)$\\
+		17 & $(2243262160137209, 1701640423934925)$\\
+		18 & $(2323526509553459, 1123682327919074)$\\
+		19 & $(777963473649634, 1615413237260867)$\\
+		20 & $(1420808458933872, 2034011761100882)$\\
+		21 & $(2061892737190217, 240178323260750)$
 	\end{tabular}
-	\label{unsuccessfuldouble}
 	\caption{Generating the list of points via doubling when $b=1$}
+	\label{unsuccessfuldouble}
 \end{table}
-
+\Cref{unsuccessfuldouble} shows the points generated by doubling, and \cref{unsuccessfuladd} shows the additions being performed.
 \begin{table}[htbp]
 	\centering
 	\begin{tabular}{c}
@@ -97,42 +104,45 @@ $$kP = $$
 		$(458028559825619, 2277727531737619)$\\
 		$kP = (458028559825619,2277727531737619)$
 	\end{tabular}
-	\label{unsuccessfuladd}
 	\caption{Adding the doubled points to get $kP$ when $b=1$}
+	\label{unsuccessfuladd}
 \end{table}
-
+Here, we have successfully calulated
+$$kP = (458028559825619,2277727531737619)$$
+What now?
+We increment $b$ to give a new curve, and start again. In this particular example, it is possible to calculate $kP$ in this way for $b=2$, $b=3$, \ldots, all the way up to $b=23387$, where something changes.
 \begin{table}[htbp]
 	\centering
 	\begin{tabular}{r|l}
 		$k$ & $2^k P$\\
 		\hline
-		1 & $(2, 1)$\\
-		2 & $(1978996223654343, 2307227360301809)$\\
-		3 & $(2065341991305728, 2602387696447713)$\\
-		4 & $(706090194730739, 364131284052804)$\\
-		5 & $(977388443992499, 2229627649103617)$\\
-		6 & $(1935153559561631, 2093139597695517)$\\
-		7 & $(175553192385993, 2422801076771166)$\\
-		8 & $(900832477635742, 1826551381265349)$\\
-		9 & $(514795954556322, 1072900592237302)$\\
-		10 & $(2067644682928109, 2124286622646949)$\\
-		11 & $(2301960260745936, 2560653520820230)$\\
-		12 & $(2512378902623323, 2537364249709183)$\\
-		13 & $(2441105821836409, 1109262897760599)$\\
-		14 & $(1236261064186840, 2217234011447721)$\\
-		15 & $(384156417337880, 1320270218117776)$\\
-		16 & $(1306192093717332, 688349719246224)$\\
-		17 & $(2062019132081890, 832733545528307)$\\
-		18 & $(1656673193668733, 916976917613322)$\\
-		19 & $(17008362074755, 1666632592566998)$\\
-		20 & $(1506916095423602, 1182578326715926)$\\
-		21 & $(850331238187406, 2319495258218643)$\\
-		22 & $(1747536919598074, 1619293033009998)$
+		0 & $(2, 1)$\\
+		1 & $(1978996223654343, 2307227360301809)$\\
+		2 & $(2065341991305728, 2602387696447713)$\\
+		3 & $(706090194730739, 364131284052804)$\\
+		4 & $(977388443992499, 2229627649103617)$\\
+		5 & $(1935153559561631, 2093139597695517)$\\
+		6 & $(175553192385993, 2422801076771166)$\\
+		7 & $(900832477635742, 1826551381265349)$\\
+		8 & $(514795954556322, 1072900592237302)$\\
+		9 & $(2067644682928109, 2124286622646949)$\\
+		10 & $(2301960260745936, 2560653520820230)$\\
+		11 & $(2512378902623323, 2537364249709183)$\\
+		12 & $(2441105821836409, 1109262897760599)$\\
+		13 & $(1236261064186840, 2217234011447721)$\\
+		14 & $(384156417337880, 1320270218117776)$\\
+		15 & $(1306192093717332, 688349719246224)$\\
+		16 & $(2062019132081890, 832733545528307)$\\
+		17 & $(1656673193668733, 916976917613322)$\\
+		18 & $(17008362074755, 1666632592566998)$\\
+		19 & $(1506916095423602, 1182578326715926)$\\
+		20 & $(850331238187406, 2319495258218643)$\\
+		21 & $(1747536919598074, 1619293033009998)$
 	\end{tabular}
-	\label{successfuldouble}
 	\caption{Generating the list of points via doubling when $b=23387$}
+	\label{successfuldouble}
 \end{table}
-
+\Cref{successfuldouble} again shows the list of points generated by doubling $P$, which is successful. However, when adding points to find $kP$, we can only get so far, as...
 \begin{table}[htbp]
 	\centering
 	\begin{tabular}{c}
@@ -149,7 +159,8 @@ $$kP = $$
 		$(914230967480337, 1578752046703807)$\\
 		$(1747536919598074, 1619293033009998)$
 	\end{tabular}
-	\label{successfuladd}
 	\caption{Attempting to add the doubled points to get $kP$ when $b=23387$}
+	\label{successfuladd}
 \end{table}
+So we factored it. Yay.
 % Found 33750191 as a factor on curve with b = 23387
