Reformat cleveref in all files + header
Passed the option to not abbreviate to cleveref, so went through all the
inputs and changed the \Cref calls to \cref as appropriate

--- a/LaTeX/ellipticdefinitions.tex
+++ b/LaTeX/ellipticdefinitions.tex
@@ -13,9 +13,9 @@ Since $F$ is a homogeneous polynomial of degree three, it suffices to check that
 	F_Y = 2Z^2 + 21Y^2 \label{deriv-2}\\
 	F_Z = 4YZ \label{deriv-3}
 \end{align}
-Suppose that $F_X = F_Y = F_Z = 0$ at a point $P = [X,Y,Z]$, \Cref{deriv-1} implies that $X=0$.
+Suppose that $F_X = F_Y = F_Z = 0$ at a point $P = [X,Y,Z]$, \cref{deriv-1} implies that $X=0$.
 \Cref{deriv-3} now implies that either $Y=0$ or $Z=0$.
-Either way, \Cref{deriv-2} subsequently implies that $X = Y = Z = 0$, which is not a valid point in homogeneous coordinates.
+Either way, \cref{deriv-2} subsequently implies that $X = Y = Z = 0$, which is not a valid point in homogeneous coordinates.
 Therefore, there are no singular points on the curve $F$ and it is indeed an elliptic curve.
 
 We list some basic properties of elliptic curves.
@@ -36,7 +36,7 @@ We do not prove this in this document but direct readers to \cite{silverman2009}
 	\caption{The chord-tangent composition law on an elliptic curve}
 	\label{chord-tangent}
 \end{figure}
-The addition rests upon the so-called `chord-tangent~law', which is illustrated in \Cref{chord-tangent}.
+The addition rests upon the so-called `chord-tangent~law', which is illustrated in \cref{chord-tangent}.
 Since an elliptic curve is cubic and regular, by definition, every line intersects it with multiplicity exactly three.
 This means that given two points (not necessarily distinct), the line on which those points lie (or the tangent line to the curve at the point, if the points are the same) will intersect the curve in exactly one other place.
 The idea of the chord-tangent law is that we can take any two points $P$ and $Q$ and define $P * Q$ to be this third point of intersection.
