--- a/LaTeX/projectivedefinitions.tex
+++ b/LaTeX/projectivedefinitions.tex
@@ -180,7 +180,7 @@ The first two have degree 3, the third, degree 2.
 \begin{definition}
 	A singular point on a curve $F$ is a point where all partial derivatives $F_X$, $F_Y$ and $F_Z$ vanish. A point that is not a singular point is called a regular point.
 \end{definition}
-Two good examples of projective curves with singular points are provided by the \emph{cusp} $C : Y^2Z - X^3$ and the \emph{node} $N : Y^2Z - X^3 - X^2Z$, which are illustrated in \Cref{cuspandnode}.
+Two good examples of projective curves with singular points are provided by the \emph{cusp} $C : Y^2Z - X^3$ and the \emph{node} $N : Y^2Z - X^3 - X^2Z$, which are illustrated in \cref{cuspandnode}.
 \begin{figure}[htbp]
 	\centering
 	\begin{tikzpicture}[scale=0.5,domain=-5:5]
