--- a/LaTeX/header.tex
+++ b/LaTeX/header.tex
@@ -11,7 +11,7 @@
 \usepackage{amsfonts}
 \usepackage{tikz}
 \usepackage{color}
-\usepackage{cleveref}
+\usepackage[noabbrev]{cleveref}
 \usepackage{lipsum}
 \usepackage{microtype}
 \usepackage{enumerate}
